Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Promotion__c/UB_Promotion__c.object-meta.xml
<CustomObject>
    <label>UB Promotion</label>
    <nameField>
        <label>UB Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UB Promotion</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>