Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Promotion__c/fields/Promotion_Owner__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UB_Promotion</relationshipName>
    <type>Lookup</type>
</CustomField>