Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Promotion__c/fields/Promotion_Pictures__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Pictures__c</fullName>
    <label>Promotion Pictures</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>