Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Promotion__c/fields/Promotion_Response__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Response__c</fullName>
    <label>Promotion Response</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Lukewarm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>