Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Promotion__c/fields/UB_Event__c.field-meta.xml
<CustomField>
    <fullName>UB_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>UB_Event__c</referenceTo>
    <relationshipLabel>UB Promotion</relationshipLabel>
    <relationshipName>UB_Promotion</relationshipName>
    <type>Lookup</type>
</CustomField>