Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Promotion__c/fields/UB_PromotaionalType__c.field-meta.xml
<CustomField>
    <fullName>UB_PromotaionalType__c</fullName>
    <label>Promotional Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Signages</fullName>
            </value>
            <value>
                <fullName>Billboards</fullName>
            </value>
            <value>
                <fullName>FM Radio</fullName>
            </value>
            <value>
                <fullName>Pamphlets</fullName>
            </value>
            <value>
                <fullName>Print Media</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>