Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Promotion__c/fields/UB_PromotionalCost__c.field-meta.xml
<CustomField>
    <fullName>UB_PromotionalCost__c</fullName>
    <label>Promotional Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>